Fix z-index of answer

--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   text-align: left;
   margin-top: 0;
   font-size: 2vh;
-  z-index:100;
+  z-index:10;
   color: black;
 }
 .words-container {
@@ -75,6 +75,7 @@ body {
   height: 12vh;
   overflow: hidden;
   white-space: nowrap;
+  z-index:20;
 }
 .preformatted {
   width: 2.4vh;
